# django-debug-template

./: .gitignore  README.rst  buildout.cfg  setup.cfg
debug_template/templatetags/: debug.py
example/: settings.py  urls.py  views.py
example/templates/: base.html
