[metadata]
name = django-debug-template
version = 0.1.5
home_page = https://github.com/t0ster/django-debug-template
author = Roman Dolgiy
author_email = roman@bravetstudio.com
summary = Project that helps you to debug django template context

[files]
packages =
    debug_template
    debug_template.templatetags
requires =
    ipdb
extra_files = setup.cfg

resources =

