[metadata]
name = django-debug-template
version = 0.1.6
home_page = https://github.com/t0ster/django-debug-template
author = Roman Dolgiy
author_email = roman@bravetstudio.com
summary = Project that helps you to debug django template context
requires_dist =
    ipdb

[files]
packages =
    debug_template
    debug_template.templatetags
extra_files = setup.cfg

resources =

